modify JRebel.md.